--- a/index.html
+++ b/index.html
@@ -3,112 +3,209 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
+    <link rel="stylesheet" href="./.css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+    <header class="header-page">
+      <a class="logo" href="./index.html"
+        ><span class="accent-logo">Web</span>Studio</a
+      >
+      <nav class="nav-header">
+        <ul class="nav-menu">
+          <li class="menu-studio"><a href="./index.html">Studio</a></li>
+          <li class="menu-portfolio"><a href="#">Portfolio</a></li>
+          <li class="menu-contacts"><a href="#">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="contacts">
+        <ul class="nav-contacts">
+          <li class="mail">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="phone">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
-    <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+    <main class="main-page">
+      <section class="intro">
+        <h1 class="intro-title">Effective Solutions for Your Business</h1>
+        <button class="button-order" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Our Features</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="features">
+        <h2 class="features-title">Our Features</h2>
+        <ul class="list-features">
+          <li class="list-features-kind">
+            <h3 class="list-features-title">Strategy</h3>
+            <p class="list-features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="list-features-kind">
+            <h3 class="list-features-title">Punctuality</h3>
+            <p class="list-features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="list-features-kind">
+            <h3 class="list-features-title">Diligence</h3>
+            <p class="list-features-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="list-features-kind">
+            <h3 class="list-features-title">Technologies</h3>
+            <p class="list-features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="list-team">
+          <li class="list-team-kind">
             <img
               src="./images/Mark.jpg"
               alt="Team Member 1"
               width="264"
               height="260"
+              class="img-team"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="member-title">Mark Guerrero</h3>
+            <p class="member-position">Product Designer</p>
           </li>
-          <li>
+          <li class="list-team-kind">
             <img
               src="./images/Tom.jpg"
               alt="Team Member 2"
               width="264"
               height="260"
+              class="img-team"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="member-title">Tom Ford</h3>
+            <p class="member-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list-team-kind">
             <img
               src="./images/Camila.jpg"
               alt="Team Member 3"
               width="264"
               height="260"
+              class="img-team"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="member-title">Camila Garcia</h3>
+            <p class="member-position">Marketing</p>
           </li>
-          <li>
+          <li class="list-team-kind">
             <img
               src="./images/Daniel.jpg"
               alt="Team Member 4"
               width="264"
               height="260"
+              class="img-team"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="member-title">Daniel Wilson</h3>
+            <p class="member-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="Portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="list-portfolio">
+          <li class="list-portfolio-kind">
+            <img
+              src="./images/Banking App.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-name">Banking App</h3>
+            <p class="portfolio-description">App</p>
+          </li>
+          <li class="list-portfolio-kind">
+            <img
+              src="./images/Cashless Payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-name">Cashless Payment</h3>
+            <p class="portfolio-description">Marketing</p>
+          </li>
+          <li class="list-portfolio-kind">
+            <img
+              src="./images/Meditation App.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-name">Meditation App</h3>
+            <p class="portfolio-description">App</p>
+          </li>
+          <li class="list-portfolio-kind">
+            <img
+              src="./images/Taxi Service.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-name">Taxi Service</h3>
+            <p class="portfolio-description">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Screen Illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <p class="portfolio-description">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/Online Courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+              class="portfolio-img"
+            />
+            <h3 class="portfolio-name">Online Courses</h3>
+            <p class="portfolio-description">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer-page">
+      <a class="logo-footer" href="./index.html"
+        ><span class="accent-logo">Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
