--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <ul class="list-portfolio">
           <li class="list-portfolio-kind">
             <img
-              src="./images/Banking App.jpg"
+              src="./images/BankingApp.jpg"
               alt="Banking App"
               width="360"
               height="300"
@@ -145,7 +145,7 @@
           </li>
           <li class="list-portfolio-kind">
             <img
-              src="./images/Cashless Payment.jpg"
+              src="./images/CashlessPayment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -156,7 +156,7 @@
           </li>
           <li class="list-portfolio-kind">
             <img
-              src="./images/Meditation App.jpg"
+              src="./images/MeditationApp.jpg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -167,7 +167,7 @@
           </li>
           <li class="list-portfolio-kind">
             <img
-              src="./images/Taxi Service.jpg"
+              src="./images/TaxiService.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -176,9 +176,9 @@
             <h3 class="portfolio-name">Taxi Service</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
-          <li>
+          <li class="list-portfolio-kind">
             <img
-              src="./images/Screen Illustrations.jpg"
+              src="./images/ScreenIllustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -187,9 +187,9 @@
             <h3 class="portfolio-name">Screen Illustrations</h3>
             <p class="portfolio-description">Design</p>
           </li>
-          <li>
+          <li class="list-portfolio-kind">
             <img
-              src="./images/Online Courses.jpg"
+              src="./images/OnlineCourses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
