--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
       >
       <nav class="nav-header">
         <ul class="nav-menu">
-          <li class="menu-studio"><a href="./index.html">Studio</a></li>
-          <li class="menu-portfolio"><a href="#">Portfolio</a></li>
-          <li class="menu-contacts"><a href="#">Contacts</a></li>
+          <li class="menu-option">
+            <a href="./index.html" class="link">Studio</a>
+          </li>
+          <li class="menu-option"><a href="#" class="link">Portfolio</a></li>
+          <li class="menu-option"><a href="#" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address class="contacts">
         <ul class="nav-contacts">
           <li class="mail">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="phone">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
