--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </li>
         </ul>
       </section>
-      <section class="Portfolio">
+      <section class="portfolio">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="list-portfolio">
           <li class="list-portfolio-kind">
