--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
       <address class="contacts">
         <ul class="nav-contacts">
           <li class="mail">
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="link-contacts"
               >info@devstudio.com</a
             >
           </li>
           <li class="phone">
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link-contacts"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
